add modal window for delete,edit users.

--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -9,15 +9,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Panel Administration</title>
+    <title>Admin Panel</title>
 </head>
 <body>
+
 <!-- Шапка -->
 <div class="container-fluid">
     <div class="row bg-dark text-white align-items-center">
 
         <div class="col-11">
-            <h5 class="p-2">admin@mail.ru with roles: ADMIN_USER</h5>
+            <div class="row p-2">
+                <h5 class="font-weight-bold" th:utext="${authUser}"> </h5>
+            </div>
+
         </div>
 
         <div class="col text-right">
@@ -62,16 +66,16 @@
                         <div class="p-4 bg-white">
                             <table class="table table-hover bg-white">
                                 <thead>
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">First Name</th>
-                                    <th scope="col">Last NAme</th>
-                                    <th scope="col">Age</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col">Role</th>
-                                    <th scope="col">Edit</th>
-                                    <th scope="col">Delete</th>
-                                </tr>
+                                    <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">First Name</th>
+                                        <th scope="col">Last NAme</th>
+                                        <th scope="col">Age</th>
+                                        <th scope="col">Email</th>
+                                        <th scope="col">Role</th>
+                                        <th scope="col">Edit</th>
+                                        <th scope="col">Delete</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
                                 <tr th:each="user : ${listUsers}">
@@ -84,10 +88,10 @@
                                         <span th:each="role : ${user.getCollectionsRoles()}" th:text="${role.role + ' '}"></span>
                                     </td>
                                     <td>
-                                        <a class="btn btn-info" href="#" role="button">Edit</a>
+                                        <button type="button" class="btn btn-info" data-toggle="modal" th:href="${'#Edit' + user.id}">Edit</button>
                                     </td>
                                     <td>
-                                        <a class="btn btn-danger" href="#" role="button">Delete</a>
+                                        <button type="button" class="btn btn-danger" data-toggle="modal" th:href="${'#Delete' + user.id}">Delete</button>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -141,16 +145,111 @@
             </div>
         </div>
     </div>
+
+    <!-- Модальное окно для удаления-->
+    <div th:each="user : ${listUsers}" class="modal fade" th:id="${'Delete' + user.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete user</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form class="container-fluid" th:action="@{/admin/delete/{id}(id = ${user.id})}" th:method="DELETE">
+                    <div class="modal-body">
+                        <fieldset disabled>
+                            <div class="form-group">
+                                <label class="font-weight-bold ">ID</label>
+                                <input type="text" class="form-control" name="id" th:value="${user.id}">
+                            </div>
+                            <div class="form-group">
+                                <label class="font-weight-bold " >First Name</label>
+                                <input type="text" class="form-control" name="FirstName" th:value="${user.firstName}">
+                            </div>
+                            <div class="form-group">
+                                <label class="font-weight-bold">Last Name</label>
+                                <input type="text" class="form-control" name="LastName" th:value="${user.lastName}">
+                            </div>
+                            <div class="form-group">
+                                <label class="font-weight-bold" >Age</label>
+                                <input type="text" class="form-control" name="Age" th:value="${user.age}">
+                            </div>
+                            <div class="form-group">
+                                <label class="font-weight-bold">Email</label>
+                                <input type="email" class="form-control" name="Email" placeholder="name@example.com" th:value="${user.email}">
+                            </div>
+                            <div class="form-group">
+                                <label class="font-weight-bold" for="Role">Role</label>
+                                <select multiple class="form-control" name="Role">
+                                    <option th:each="role : ${user.roles}" th:value="${role.id}" th:text="${role.role}">...</option>
+                                </select>
+                            </div>
+                        </fieldset>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <input class="btn btn-danger" type="submit" role="button" value="Delete">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Модальное окно для редактирования-->
+    <div th:each="user : ${listUsers}" class="modal fade" th:id="${'Edit' + user.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit user</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form class="container-fluid" th:action="@{/admin/{id}/edit(id=${user.id})}" th:method="PUT">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label class="font-weight-bold ">ID</label>
+                            <input type="text" class="form-control" name="id" th:value="${user.id}" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold " >First Name</label>
+                            <input type="text" class="form-control" name="FirstName" th:value="${user.firstName}">
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold">Last Name</label>
+                            <input type="text" class="form-control" name="LastName" th:value="${user.lastName}">
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold" >Age</label>
+                            <input type="text" class="form-control" name="Age" th:value="${user.age}">
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold">Email</label>
+                            <input type="email" class="form-control" name="Email" placeholder="name@example.com" th:value="${user.email}">
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold">Password</label>
+                            <input type="password" class="form-control" name="Password" th:value="${user.password}">
+                        </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold" for="Role">Role</label>
+                            <select multiple class="form-control" name="role">
+                                <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.role}" th:selected="${user.collectionsRoles.contains(role)}">...</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <input class="btn btn-primary" type="submit" role="button" value="Edit">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 </div>
-
-
-
-
-
-
-
-
-
 
 
 <!-- Optional JavaScript -->
